feat: #50 validate attachment
