# src/main/java/io/github/genomicdatainfrastructure/daam/api/AttachmentTooLargeExceptionMapper.java
@@ -1,0 +1,36 @@
+// SPDX-FileCopyrightText: 2024 PNED G.I.E.
+//
+// SPDX-License-Identifier: Apache-2.0
+
+package io.github.genomicdatainfrastructure.daam.api;
+
+import static jakarta.ws.rs.core.Response.Status.BAD_REQUEST;
+
+import io.github.genomicdatainfrastructure.daam.exceptions.AttachmentTooLargeException;
+import io.github.genomicdatainfrastructure.daam.model.ErrorResponse;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.ext.ExceptionMapper;
+import jakarta.ws.rs.ext.Provider;
+import java.util.List;
+
+@Provider
+public class AttachmentTooLargeExceptionMapper implements
+        ExceptionMapper<AttachmentTooLargeException> {
+
+    @Override
+    public Response toResponse(AttachmentTooLargeException exception) {
+        var errorResponse = new ErrorResponse(
+                "Attachment Too Large",
+                BAD_REQUEST.getStatusCode(),
+                exception.getMessage(),
+                List.of()
+        );
+
+        return Response
+                .status(BAD_REQUEST)
+                .entity(errorResponse)
+                .type(MediaType.APPLICATION_JSON)
+                .build();
+    }
+}
